# rc-Doom

./: .gitignore  CMakeLists.txt  README.md
assets/: map_1.txt  map_2.txt
include/: constants.h  isDefined.h
src/: color.h  imageloader.h  main.cpp  raycaster.h
